# blinkyy

./: Cargo.toml  README.md  flake.nix  nix-log.txt  result  std-wasi-dep.patch
.cargo/: config.toml
src/: main.rs
