[package]
name = "blinkyy"
version = "0.1.0"
authors = ["of-the-stars <stellae.incaelis@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
bench = false
name = "blinkyy"
test = false

[dependencies]
addr2line = "0.25.1"
dlmalloc_0_2_11 = { package = "dlmalloc", version = "=0.2.11" }
embedded-hal = "1.0"
foldhash = "0.2.0"
fortanix-sgx-abi = "0.6.1"
getopts = "0.2.24"
hermit-abi = "0.5.2"
libc = "=0.2.178"
moto-rt = "0.16.0"
nb = "1.1.0"
object = "0.37.1"
panic-halt = "1.0.0"
r-efi = "5.3.0"
r-efi-alloc = "2.1.0"
rustc-demangle = "0.1"
rustc-literal-escaper = "0.0.5"
ufmt = "0.2.0"
unwinding = "0.2.8"
vex-sdk = "0.27.1"
wasi = "=0.14.4"
wasi_0_11_0 = { package = "wasi", version = "0.11.0" }

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal.git"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
opt-level = "s"
lto = true
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
lto = true
panic = "abort"
codegen-units = 1
