[package]
name = "blinkyy"
version = "0.1.0"
authors = ["of-the-stars <stellae.incaelis@gmail.com>"]
edition = "2024"

[[bin]]
bench = false
name = "blinkyy"
test = false

[dependencies]
embedded-hal = { version = "1.0", default-features = false, features = [] }
panic-halt = { version = "1.0.0", default-features = false, features = [] }
ufmt = { version = "0.2.0", default-features = false, features = [] }

# addr2line = { version = "0.25.1", default-features = false, features = [] }
# dlmalloc_0_2_11 = { package = "dlmalloc", version = "=0.2.11" }
# foldhash = { version = "0.2.0", default-features = false, features = [] }
# fortanix-sgx-abi = { version = "0.6.1", default-features = false, features = [] }
# getopts = { version = "0.2.24", default-features = false, features = [] }
# hermit-abi = { version = "0.5.2", default-features = false, features = [] }
# libc = { version = "=0.2.178", default-features = false, features = [] }
# miniz_oxide = { version "0.9.0", default-features = false, features = []}
# moto-rt = { version = "0.16.0", default-features = false, features = [] }
# nb = { version = "1.1.0", default-features = false, features = [] }
# object = { version = "0.37.1", default-features = false, features = [] }
# r-efi = { version = "5.3.0", default-features = false, features = [] }
# r-efi-alloc = { version = "2.1.0", default-features = false, features = [] }
# rustc-demangle = "0.1"
# rustc-literal-escaper = { version = "0.0.7", default-features = false, features = [
#
# ] }
# unwinding = { version = "0.2.8", default-features = false, features = [] }
# vex-sdk = { version = "0.27.1", default-features = false, features = [] }
# wasi = { version = "=0.14.4", default-features = false, features = [] }
# wasi_0_11_0 = { package = "wasi", version = "0.11.0" }

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal.git"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["arduino-uno"]

[build-dependencies]
panic-halt = { version = "1.0.0", default-features = false, features = [] }

[build-dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal.git"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
opt-level = "s"
lto = true
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
lto = true
panic = "abort"
codegen-units = 1
